# type-wiz-dev

./: .gitignore  Cargo.toml  LICENSE  README.md  installer_setup.iss
.github/workflows/: release.yml
src/: main.rs  questions.rs  roman_mapping.rs  save_data.rs  update.rs
wix/: main.wxs
