[package]
name = "typewiz"
version = "0.1.1"
license = "MIT"
edition = "2024"
authors = ["Fukumoto0141"]
description = "TYPE WiZ."
repository = "https://github.com/Fukumoto0141/type-wiz-dev.git"

[package.metadata.wix]
upgrade-guid = "20E59377-F54A-4EB3-A6B5-8AE829DFC184"
path-guid = "A4959E94-C134-4223-B63C-895435313089"
license = false
eula = false
locale = "ja-JP"
banner = "./banner.png"
dialog = "./dialog.png"
product-icon = "./product_icon.ico"


[dependencies]
bincode = "2.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.52", features = ["derive"] }
console = "0.16.1"
crossterm = "0.29.0"
dialoguer = "0.12.0"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
