[package]
name = "typewiz"
version = "0.1.3"
license = "MIT"
edition = "2024"
authors = ["Fukumoto0141"]
description = "TYPE WiZ."
repository = "https://github.com/Fukumoto0141/type-wiz-dev.git"

[dependencies]
bincode = "2.0.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.52", features = ["derive"] }
console = "0.16.1"
crossterm = "0.29.0"
dialoguer = "0.12.0"
directories = "6.0.0"
rand = "0.9.2"
ratatui = "0.29.0"
self_update = "0.42.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
